Site version 1.0 - z-index fix

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -48,11 +48,6 @@ header {
     display: block;
     margin-bottom: 15px;
     width:100%;
-    /* transition: all .4s ease; */
-}
-
-.index1 {
-    z-index: 1;
 }
 
 .index2 {
